--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -397,12 +397,21 @@
 
     button,
     a {
+      position: relative;
       background: $white;
       padding: 5px 10px;
       border: 1px solid $input-border-color;
       font-size: 14px;
       border-radius: 5px;
       cursor: default;
+    }
+    .add-warning::before {
+      content: "选项不能为空";
+      position: absolute;
+      top: 4px;
+      left: -90px;
+      font-size: 12px;
+      color: #ea5859;
     }
   }
 
@@ -467,6 +476,9 @@
           text-decoration: none;
           color: $white;
         }
+      }
+      input.option-blank {
+        box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 8px rgba(233, 102, 102, 0.7);
       }
     }
 
